[gd_scene load_steps=2 format=3 uid="uid://dtnggwknbevpq"]

[ext_resource type="Script" uid="uid://da850in6tytof" path="res://scripts/main.gd" id="1_o5qli"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OutputDisplay" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="CommandInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Type command here..."

[node name="SendButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Execute Command"
alignment = 0
